; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_repository.c_create_empty_file.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_repository.c_create_empty_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ERROR_OS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"error while creating '%s'\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"error while closing '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @create_empty_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_empty_file(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @p_creat(i8* %7, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @GIT_ERROR_OS, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @git_error_set(i32 %12, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %13)
  store i32 -1, i32* %3, align 4
  br label %24

15:                                               ; preds = %2
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @p_close(i32 %16)
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i32, i32* @GIT_ERROR_OS, align 4
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 @git_error_set(i32 %20, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i8* %21)
  store i32 -1, i32* %3, align 4
  br label %24

23:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %19, %11
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @p_creat(i8*, i32) #1

declare dso_local i32 @git_error_set(i32, i8*, i8*) #1

declare dso_local i64 @p_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
